--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "clean": "rm -rf dist/",
     "build": "npm run clean && babel --out-dir dist/ src/",
     "eslint": "eslint src/",
-    "test": "npm run eslint",
-    "start": "npm run build && env $(cat .env) node index.js"
+    "start": "npm run build && node index.js",
+    "mocha": "mocha --require co-mocha --require ./index --bail dist/test",
+    "test": "npm run eslint && npm run build && npm run mocha"
   },
   "license": "ISC",
   "devDependencies": {
@@ -16,8 +17,12 @@
     "babel-core": "^6.22.1",
     "babel-plugin-transform-builtin-extend": "^1.1.0",
     "babel-preset-es2015": "^6.22.0",
+    "chai": "^3.5.0",
+    "co-mocha": "^1.1.3",
     "eslint": "^3.13.1",
-    "eslint-config-google": "^0.7.1"
+    "eslint-config-google": "^0.7.1",
+    "mocha": "^3.2.0",
+    "supertest": "^2.0.1"
   },
   "dependencies": {
     "babel-polyfill": "^6.22.0",
@@ -26,6 +31,7 @@
     "koa": "^1.2.4",
     "koa-bodyparser": "^2.3.0",
     "koa-compose": "^2.5.1",
+    "koa-ejs": "^3.0.0",
     "koa-json": "^1.1.3",
     "koa-router": "^5.4.0",
     "lodash": "^4.17.4"
@@ -42,6 +48,10 @@
       "es6": true
     },
     "rules": {
+      "max-nested-callbacks": [
+        "error",
+        10
+      ],
       "no-invalid-this": "off",
       "comma-dangle": [
         "error",
