--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "supertest": "^2.0.1"
   },
   "dependencies": {
+    "ajv": "^4.11.1",
     "babel-polyfill": "^6.22.0",
     "co": "^4.6.0",
     "debug": "^2.6.0",
@@ -33,7 +34,8 @@
     "koa-ejs": "^3.0.0",
     "koa-json": "^1.1.3",
     "koa-router": "^5.4.0",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "uuid": "^3.0.1"
   },
   "eslintConfig": {
     "extends": "google",
